# lmev

./: README.md
lmev/: run_lmev.sh
lmev/src/lmev_gazebo/: CMakeLists.txt  package.xml
lmev/src/lmev_gazebo/include/lmev_gazebo/: gazebo_ros_bumper.h  gazebo_ros_color.h  gazebo_ros_diff_drive.h  gazebo_ros_imu_sensor.h  gazebo_ros_range.h
lmev/src/lmev_gazebo/launch/: keyboard_teleop.launch  lmev.launch
lmev/src/lmev_gazebo/models/lmev/: model.config  model.sdf
lmev/src/lmev_gazebo/models/lmev/meshes/: Arm.dae  Caster.dae  Color.dae  Gyroscope.dae  Touch.dae  Ultrasonic.dae  Wheel.dae
lmev/src/lmev_gazebo/models/lmev_light_bulb/: model.config  model.sdf
lmev/src/lmev_gazebo/models/lmev_track3/: model.config  model.sdf
lmev/src/lmev_gazebo/robotc/: Light_Finder_Algorithm_Real.c  Validation.c
lmev/src/lmev_gazebo/scripts/: Light_Finder_Algorithm.py  Main_Controller.py  Target_Motor.py  Target_Tank.py  Validation.py
lmev/src/lmev_gazebo/src/: gazebo_ros_ambient.cpp  gazebo_ros_arm_motor.cpp  gazebo_ros_bumper.cpp  gazebo_ros_color.cpp  gazebo_ros_diff_drive.cpp  gazebo_ros_encoders.cpp  gazebo_ros_imu_sensor.cpp  gazebo_ros_left_wheel_motor.cpp  gazebo_ros_light.cpp  gazebo_ros_range.cpp  gazebo_ros_right_wheel_motor.cpp  welcome.cpp
lmev/src/lmev_gazebo/worlds/: lmev.world  lmev_track.world
